objects/amazonconnect__AC_ContactChannels__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__AfterContactWorkDuration__c</fullName>
        <label>ACW Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentCustomerHoldDuration__c</fullName>
        <label>Hold Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentLoginUsername__c</fullName>
        <label>Agent Login Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AgentName__c</fullName>
        <label>Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Attributes__c</fullName>
        <label>Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CallEndTimestamp__c</fullName>
        <label>Call End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CallRecording__c</fullName>
        <description>Recording link</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CallStartTimestamp__c</fullName>
        <label>Call Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CallStatus__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
                <value>
                    <fullName>Incoming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>AC Contact Channels</relationshipLabel>
        <relationshipName>AC_Contact_Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__CustomerCallbackNumber__c</fullName>
        <label>Customer Callback Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CustomerNumber__c</fullName>
        <label>Customer Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DialedNumber__c</fullName>
        <label>Dialed Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__InitiationMethod__c</fullName>
        <label>Initiation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__InteractionDuration__c</fullName>
        <label>Interaction Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__QueueName__c</fullName>
        <label>Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RelatedToWhatId__c</fullName>
        <externalId>true</externalId>
        <label>RelatedToWhatId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RelatedToWhoId__c</fullName>
        <externalId>true</externalId>
        <label>RelatedToWhoId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AC Contact Channel</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Contact Channel {000000000}</displayFormat>
        <label>Contact Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Contact Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>